--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -1,12 +1,15 @@
 {
-	"title": "Hauptseite | next-i18next",
-	"keywords": "test DE",
-	"description": "beschreibung DE",
+	"title": "Startseite - Personalvermittlung",
+	"keywords": "AB Connection Vermittlung von Pflegekräfte",
+	"description": "Personalvermittlung für Pflegekräfte",
 	"path": "/de",
+	"candidatepath": "/de/candidate",
+	"contactpath": "/de/contact",
 	"hreflang": "de-DE",
+	"author": "Personalvermitllung für Pflegekräfte",
 	"home1": "Wir sind ein Unternehmen, das sich auf die Vermittlung von Fachkräften im Gesundheitswesen spezialisiert hat. Unser Hauptziel ist es, unseren Kandidaten zu helfen, ihren Beruf in Deutschland anerkennen lassen zu können, sowohl sie bei ihrer Integration in den deutschen Arbeitsmarkt zu unterstützen.",
 	"home2": "Arzt/Ärztin, Pflegefachfrau/-mann, Pflegehelfer/-rin, mit oder ohne Erfahrung, sind alle herzlich willkommen in unserem Bewerbungsverfahren.",
-	"home3": "AB Connection",
+	"home3": "AB Connection,",
 	"home4": "",
 	"home5": "mehr lesen",
 	"home6": "Kontakt",
