--- a/public/locales/de/navbar.json
+++ b/public/locales/de/navbar.json
@@ -1,4 +1,5 @@
 {
+	"logohref": "/de",
 	"about": "uber-uns",
 	"about1": "Über Uns",
 	"services": "leistungen",
@@ -18,8 +19,31 @@
 	"register2": "Login",
 	"register3": "Jetzt anmelden",
 	"register4": "Logout",
-	"cookies": "This website uses cookies to ensure you get the best experience on our website",
-	"button": "Got it!",
+	"cookies": "Diese Website verwendet Cookies",
+	"button": "Zulassen",
 	"signin": "Einloggen",
-	"signin1": "einloggen"
+	"signin1": "einloggen",
+	"candidatenav": "Arbeiten in Deutschland",
+	"candidatehref": "/de/candidate",
+	"candidatepath": "candidate",
+	"jobsnav": "Stellenangebot",
+	"jobshref": "/de/jobs",
+	"jobspath": "jobs",
+	"faqnav": "Häufige Fragen",
+	"faqhref": "/de/faq",
+	"faqpath": "faq",
+	"blognav": "Nachrichten aus Deutschland",
+	"bloghref": "/de/blog",
+	"blogpath": "blog/nachrichten",
+	"servicesnav": "Unsere Leistungen",
+	"serviceshref": "/de/service",
+	"servicespath": "service",
+	"aboutnav": "Über uns",
+	"abouthref": "/de/about",
+	"aboutpath": "about",
+	"contactnav": "Kontakt",
+	"contacthref": "/de/contact",
+	"contactpath": "contact",
+	"flage": "/assets/flags/deutschland-deutsch-de.png",
+	"flageAlt": "DE-DE"
 }
