--- a/public/locales/pt/navbar.json
+++ b/public/locales/pt/navbar.json
@@ -1,11 +1,12 @@
 {
+	"logohref": "/",
 	"about": "quem-somos",
 	"about1": "Quem Somos",
 	"services": "servicos",
 	"services1": "Serviços",
 	"candidate": "candidato",
 	"candidate1": "Candidatos",
-	"candidateway": "candidatura",
+	"candidateway": "Candidatura",
 	"jobs": "vagas",
 	"jobs1": "Vagas",
 	"faq": "FAQ",
@@ -18,8 +19,29 @@
 	"register2": "Entrar",
 	"register3": "Ainda não está Registrado ?",
 	"register4": "Sair",
-	"cookies": "This website uses cookies to ensure you get the best experience on our website",
-	"button": "Got it!",
+	"cookies": "ATENÇÃO! Este site utiliza cookies. Ao navegar no site estará a consentir a sua utilização.",
+	"button": "Aceito",
 	"signin": "login",
-	"signin1": "Login"
+	"signin1": "Login",
+	"candidatenav": "Como trabalhar na Alemanha",
+	"candidatehref": "/candidate",
+	"candidatepath": "trabalhar-na-alemanha-como-enfermeiro&enfermeiros-na-alemanha",
+	"jobsnav": "Vagas de trabalho",
+	"jobspath": "emprego-para-enfermeiros-na-alemanha",
+	"faqnav": "Perguntas frequentes",
+	"faqhref": "/faq",
+	"faqpath": "FAQ-perguntas-frequentes",
+	"blognav": "Materias exclusivas sobre a Alemanha",
+	"blogpath": "blog/noticias-sobre-alemanha",
+	"servicesnav": "Nossos serviços",
+	"serviceshref": "/service",
+	"servicespath": "nossos-serviços",
+	"aboutnav": "Um pouco sobre nós",
+	"abouthref": "/about",
+	"aboutpath": "sobre-ab-connection",
+	"contactnav": "Entrar em contato",
+	"contacthref": "/contact",
+	"contactpath": "entrar-em-contato",
+	"flage": "/assets/flags/brasil-portugues-pt-br.png",
+	"flageAlt": "PT-BR"
 }
