--- a/public/locales/pt/contact.json
+++ b/public/locales/pt/contact.json
@@ -1,4 +1,10 @@
 {
+	"title": "Contato | Emprego na Alemanha para Enfermeiros",
+	"keywords": "Trabalho como enfermeiros na Alemanha, serviços e suporte de emprego na Alemanha para Enfermeiros.",
+	"description": "Contato e suporte para emprego na Alemanha como Enfermeiros.",
+	"path": "/contact",
+	"hreflang": "pt-BR",
+	"author": "AB Connection - Trabalho para enfermeiros na Alemanha",
 	"contact": "Contato",
 	"contact1": "Nome",
 	"contact2": "E-Mail",
