--- a/public/locales/de/contact.json
+++ b/public/locales/de/contact.json
@@ -14,5 +14,5 @@
 	"contact6": "mailto:kontakt@abconnection.de",
 	"contact7": "<strong>Anrufe & Whats App</strong>",
 	"contact8": "tel:+491736218918",
-	"contact9": ""
+	"contact9": "<strong>Berlin - Detuschland</strong>"
 }
