--- a/public/locales/pt/contact.json
+++ b/public/locales/pt/contact.json
@@ -14,5 +14,5 @@
 	"contact6": "mailto:contato@abconnection.de",
 	"contact7": "<strong>Whats App</strong>",
 	"contact8": "tel:0055491736218918",
-	"contact9": ""
+	"contact9": "<strong>Berlim - Alemanha</strong>"
 }
