--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -17,5 +17,8 @@
 	"error1": "Oh não",
 	"error": "Infelizmente a página não foi encontrada",
 	"error-with-status": "Erro no servidor ({{statusCode}}) ",
-	"error-without-status": "Página nao encontrada"
+	"error-without-status": "Página nao encontrada",
+	"success-title": "AB Connection - E-Mail enviado",
+	"success": "Seu E-Mail foi enviado com sucesso !",
+	"success1": "Entraremos em contato o mais breve possível"
 }
