--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -20,5 +20,6 @@
 	"error-without-status": "Página nao encontrada",
 	"success-title": "AB Connection - E-Mail enviado",
 	"success": "Seu E-Mail foi enviado com sucesso !",
-	"success1": "Entraremos em contato o mais breve possível"
+	"success1": "Entraremos em contato o mais breve possível",
+	"whats-app": "*Para eventuais duvida(s) e/ou pergunta(s) clique no botão do Whats App e deixe sua mensagem."
 }
