whats-app translate

--- a/public/locales/de/faq.json
+++ b/public/locales/de/faq.json
@@ -16,5 +16,6 @@
 	"faq9": "Was ist Haager Apostille ?",
 	"faq10": "",
 	"faq11": "Warum müssen Übersetzungen von einem (in Deutschland) vereidigten Übersetzer angefertigt werden ?",
-	"faq12": ""
+	"faq12": "",
+	"whats-app": "Für eventuellen Fragen schreiben Sie uns eine Nachricht über den WhatsApp Button."
 }
