--- a/public/locales/pt/faq.json
+++ b/public/locales/pt/faq.json
@@ -16,5 +16,6 @@
 	"faq9": "O que é Apostila de Haia ?",
 	"faq10": "É um certificado de autenticidade e tem o objetivo de agilizar e simplificar a legalização de documentos entre os países signatários da Convenção de Haia/2016, permitindo o reconhecimento mútuo de documentos brasileiros no exterior.  Este certificado atesta a sua assinatura, cargo do agente público, carimbo ou selo da instituição, publica ou privada que o emitiu. Os documentos emitidos por autoridades brasileiras, somente podem ser apostilados no Brasil, junto a um cartório ou tabelionato.",
 	"faq11": "Por quê as traduções devem ser feitas por um tradutor juramentado na Alemanha ?",
-	"faq12": "Tradução Pública ou Juramentada possuem fé pública. O tradutor juramentado possui fé pública, ou seja, ele é habilitado e autorizado pelo Estado de sua jurisdição, a ele é  conferido fé pública  para garantir o conteúdo e autenticidade do documento original em língua estrangeira."
+	"faq12": "Tradução Pública ou Juramentada possuem fé pública. O tradutor juramentado possui fé pública, ou seja, ele é habilitado e autorizado pelo Estado de sua jurisdição, a ele é  conferido fé pública  para garantir o conteúdo e autenticidade do documento original em língua estrangeira.",
+	"whats-app": "*Para eventuais duvida(s) e/ou pergunta(s) clique no botão do Whats App e deixe sua mensagem."
 }
