--- a/public/locales/de/navbar.json
+++ b/public/locales/de/navbar.json
@@ -44,6 +44,6 @@
 	"contactnav": "Kontakt",
 	"contacthref": "/de/contact",
 	"contactpath": "/de/kontakt",
-	"flage": "/assets/flags/deutschland-deutsch-de.png",
+	"flage": "/assets/flags/deutschland-deutsch-de.webp",
 	"flageAlt": "DE-DE"
 }
