--- a/public/locales/pt/navbar.json
+++ b/public/locales/pt/navbar.json
@@ -42,6 +42,6 @@
 	"contactnav": "Entrar em contato",
 	"contacthref": "/contact",
 	"contactpath": "/entre-em-contato",
-	"flage": "/assets/flags/brasil-portugues-pt-br.png",
+	"flage": "/assets/flags/brasil.png",
 	"flageAlt": "PT-BR"
 }
