remove double text

--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -11,7 +11,7 @@
 	"home2": "Nosso principal objetivo é auxiliar nossos candidatos a validar sua profissão na Alemanha, obtendo assim a oportunidade de conseguir um trabalho na Alemanha junto a nossas empresas parceiras.",
 	"home3": "Para você Enfermeiro, Técnico ou Auxiliar de enfermagem, que dispõe de formação superior e/ou técnica completa, com ou sem experiência, e está aberto a aprender um novo idioma, alemão, conhecer as riquezas da cultura alemã, esta é a sua oportunidade de morar na Europa.",
 	"home4": "AB Connection,",
-	"home5": "trabalhar na na Alemanha como Enfermeiro",
+	"home5": "trabalhar na Alemanha como Enfermeiro",
 	"home6": "Saiba mais",
 	"home7": "Entrar em contato",
 	"error1": "Oh não",
