/blog page, tailwind, mdx

--- a/public/locales/de/navbar.json
+++ b/public/locales/de/navbar.json
@@ -33,8 +33,12 @@
 	"faqhref": "/de/faq",
 	"faqpath": "faq",
 	"blognav": "Nachrichten aus Deutschland",
-	"bloghref": "/de/blog",
-	"blogpath": "blog/nachrichten",
+	"bloghref": "/de",
+	"blogpath": "",
+	"nursenav": "Pflege in Deutschland",
+	"nursehref": "/de",
+	"nursepath": "",
+	"nurse": "Pflegefachkraft",
 	"servicesnav": "Unsere Leistungen",
 	"serviceshref": "/de/service",
 	"servicespath": "service",
