--- a/public/locales/pt/navbar.json
+++ b/public/locales/pt/navbar.json
@@ -32,7 +32,14 @@
 	"faqhref": "/faq",
 	"faqpath": "FAQ-perguntas-frequentes",
 	"blognav": "Materias exclusivas sobre a Alemanha",
-	"blogpath": "blog/noticias-sobre-alemanha",
+	"bloghref": "/blog",
+	"blogpath": "/blog/enfermeiros-na-alemanha",
+	"blogdesc": "Descubra informações valiosas para enfermeiros interessados em trabalhar na Alemanha. Nosso blog oferece artigos abrangentes sobre requisitos, salários, configurações de trabalho e benefícios para enfermeiros na Alemanha. Encontre orientações especializadas e dicas úteis para iniciar sua carreira como enfermeiro na Alemanha.",
+	"blogkey": "enfermeiro, enfermagem, trabalho, Alemanha, salário, configurações de trabalho, benefícios, carreira, oportunidades, requisitos, registro, qualificações, experiência, validação de diplomas, ambulatório, hospital, enfermeiro ambulante, emprego, educação contínua, progressão na carreira, saúde, orientação, blog, dicas",
+	"nursenav": "Trabalhar como Enfermeiro na Alemanha",
+	"nursehref": "/enfermeiro",
+	"nursepath": "/trabalahar-como-enfermeiro-na-alemanha",
+	"nurse": "Enfermeiros",
 	"servicesnav": "Nossos serviços",
 	"serviceshref": "/service",
 	"servicespath": "nossos-serviços",
