metas: desc., keywords

--- a/public/locales/pt/common.json
+++ b/public/locales/pt/common.json
@@ -1,7 +1,7 @@
 {
 	"title": "AB Connection - connectando você à Alemanha | Emprego na Alemanha",
-	"keywords": "Trabalhar na Alemanha como Enfermeiro. Enfermeiros na Alemanha. Trabalho para Enfermeiros na Alemanha. Como trabalhar na Alemanha como enfermeiro. Vaga de trabalho para enfermeiros na Alemanha. Auxiliar de Enfermagem na Alemanha. Técnico de Enfermagen na Alemanha. Vagas de trabalho em hopital na Alemanha. Hospitais na Alemanha. Como viver na Alemanha. Como é o trabalho de Enfermagem na Alemanha. Como trabalha um enfermeiro na Alemanha.",
-	"description": "Vaga de trabalho para Enfermeiros na Alemanha, Trabalhar na alemanha como Enfermeiro, Enfermeiros na Alemanha, Emprego na Alemanha, Hospitais na Alemanha",
+	"keywords": "Emprego para enfermeiros na Alemanha, vagas para médicos brasileiros na Alemanha, oportunidades de carreira em enfermagem na Alemanha, trabalho em hospitais alemães, como ser enfermeiro na Alemanha, enfermagem na Alemanha para brasileiros, técnico de enfermagem na Alemanha, auxiliar de enfermagem na Alemanha, imigração para enfermeiros, mercado de trabalho para enfermeiros na Alemanha, vida na Alemanha para profissionais de saúde.",
+	"description": "Explore oportunidades exclusivas de emprego na Alemanha para enfermeiros e médicos brasileiros. Junte-se a hospitais renomados e avance em sua carreira na área da saúde. Descubra vagas abertas para trabalhar como enfermeiro e médico em instituições renomadas na Alemanha.",
 	"path": "/",
 	"candidatepath": "/candidate",
 	"contactpath": "/service",
